.provarCaches/00D5f000005vwGkEAI/objects/rstkf__arcuststmt4__c.object
<CustomObject>
    <description>arcuststmt4__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <externalId>true</externalId>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_age__c</fullName>
        <formula>IF ( rstkf__arcuststmt4_arinvdue__r.rstkf__arinvdue_maintvalue__c &gt; 0, rstkf__arcuststmt4_arcuststsmt3__r.rstkf__arcuststmt3_arcuststmt2__r.rstkf__arcuststmt2_arcuststmt1__r.rstkf__arcuststmt1_enddate__c - rstkf__arcuststmt4_arinvdue__r.rstkf__arinvdue_arinvtxn__r.rstkf__arinvtxn_trandate__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Aging Date is the number of days since the Invoice Date to the Statement End Date. Note that it is zero for &apos;paid&apos; transactions and also all credit memos/unapplied cash.</inlineHelpText>
        <label>Aging Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_arcuststmt6exists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Charge Detail Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_arcuststsmt3__c</fullName>
        <label>AR Statements Customer Header</label>
        <referenceTo>rstkf__arcuststmt3__c</referenceTo>
        <relationshipLabel>AR Statements Customer Sub-Headers</relationshipLabel>
        <relationshipName>arcuststmt4s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_arinvdue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receivable Transaction Scheduled Payment</label>
        <referenceTo>rstkf__arinvdue__c</referenceTo>
        <relationshipLabel>AR Statements Customer Sub-Headers</relationshipLabel>
        <relationshipName>arcuststmt4s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_currency__c</fullName>
        <label>Currency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_dayslate__c</fullName>
        <label>Days Late</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_detaillines__c</fullName>
        <label>Number of Detail Lines to Print</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_endbal__c</fullName>
        <label>Balance at Month End</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_finchgamt__c</fullName>
        <label>Finance Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_finchgcalc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Charge Calculated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_lineheader__c</fullName>
        <label>Statement Line Header</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_lineseq__c</fullName>
        <label>Line Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_openbal__c</fullName>
        <label>Open Balance as of Statement Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_showcurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_showdetailedfinchgs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Details Finance Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_showdetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_showfinchgs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Finance Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_startbal__c</fullName>
        <label>Balance at Month Start</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_sublineheader__c</fullName>
        <label>Payment Detail Header</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__arcuststmt4_textline__c</fullName>
        <label>Formatted Statement Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__arcuststmt4_arcuststsmt3__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT(rstkf__arcuststmt4_lineseq__c)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>LEFT((rstkf__arcuststmt4_arcuststsmt3__r.Name &amp; &apos;-&apos; &amp;  TEXT(rstkf__arcuststmt4_lineseq__c)), 80)</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>AR Statements Customer Sub-Header</label>
    <listViews>
        <fullName>rstkf__RS_AR_Statements_Customer_Sub_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__externalid__c</columns>
        <columns>rstkf__arcuststmt4_lineseq__c</columns>
        <columns>rstkf__arcuststmt4_arcuststsmt3__c</columns>
        <columns>rstkf__arcuststmt4_sublineheader__c</columns>
        <columns>rstkf__arcuststmt4_textline__c</columns>
        <columns>rstkf__arcuststmt4_finchgamt__c</columns>
        <columns>rstkf__arcuststmt4_openbal__c</columns>
        <columns>rstkf__arcuststmt4_dayslate__c</columns>
        <columns>rstkf__arcuststmt4_finchgcalc__c</columns>
        <columns>rstkf__arcuststmt4_arcuststmt6exists__c</columns>
        <columns>rstkf__arcuststmt4_detaillines__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>AR Statements Customer Sub-Headers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AR Statements Customer Sub-Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>